--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Template for a Webpack Project including setting sass compilers and autoprefixers.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack && webpack-dev-server --content-base public/"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Macarena Poo",
   "license": "ISC",
@@ -21,5 +20,13 @@
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7"
   }
 }
